<<<<<<<< HEAD:src/main/java/ar/edu/utn/frba/dds/donaciones/domain/BienSimple.java
package ar.edu.utn.frba.dds.donaciones.domain;
========
package ar.edu.utn.frba.dds.bienes;
>>>>>>>> temp:src/main/java/ar/edu/utn/frba/dds/bienes/BienSimple.java

public class BienSimple extends Bien {

  public BienSimple(String descripcion, String foto, Subcategoria subcategoria, Integer cantidad, String unidadDeMedida) {
    super(descripcion, foto, subcategoria, cantidad, unidadDeMedida);
  }
}
