@startuml DonaTrack - Diagrama de Clases

skinparam classAttributeIconSize 0
skinparam classFontStyle bold
skinparam classBackgroundColor #EEEDFE
skinparam classBorderColor #7F77DD
skinparam classArrowColor #534AB7
skinparam stereotypeCBackgroundColor #E1F5EE
skinparam stereotypeABackgroundColor #FAEEDA
skinparam noteBackgroundColor #FAEEDA
skinparam noteBorderColor #BA7517

' ─────────────────────────────────────────
'  DONANTES
' ─────────────────────────────────────────

abstract class PersonaDonante {
  - List<MedioDeContacto> mediosDeContacto
  - MedioDeContacto predeterminado
  + agregarMedio(MedioDeContacto): void
  + setPredeterminado(MedioDeContacto): void
  + getMedioPredeteminado(): MedioDeContacto
}

class PersonaHumana {
  - String nombre
  - String apellido
  - int edad
  - String dni
  - String genero
  - String direccion
}

class PersonaJuridica {
  - String razonSocial
  - TipoJuridico tipo
  - String rubro
  - List<Representante> representantes
  + agregarRepresentante(Representante): void
}

class Representante {
  - String nombre
  - String apellido
  - String dni
  - String email
}

enum TipoJuridico {
  GUBERNAMENTAL
  ONG
  EMPRESA
  INSTITUCION
}

' ─────────────────────────────────────────
'  MEDIOS DE CONTACTO
' ─────────────────────────────────────────

abstract class MedioDeContacto {
  - String valor
  + getValor(): String
  + enviarMensaje(String): void
}

class Email {
  + enviarMensaje(String): void
}

class Telefono {
  + enviarMensaje(String): void
}

class WhatsApp {
  + enviarMensaje(String): void
}

' ─────────────────────────────────────────
'  BIENES Y CATEGORIAS
' ─────────────────────────────────────────

class Subcategoria {
  - String nombre
  - Categoria categoria
  - boolean requiereEstado
  - boolean esPerecible
  + getNombre(): String
  + getCategoria(): Categoria
}

enum Categoria {
  MOBILIARIO
  ALIMENTOS
  VESTIMENTA
}

abstract class Bien {
  - String descripcion
  - String foto
  - Subcategoria subcategoria
  - int cantidad
  - String unidadMedida
  + getDescripcion(): String
  + getSubcategoria(): Subcategoria
  + getCantidad(): int
}

class BienSimple {
}

class BienConEstado {
  - boolean esNuevo
  + isEsNuevo(): boolean
}

class BienPerecible {
  - LocalDate fechaVencimiento
  + getFechaVencimiento(): LocalDate
}

' ─────────────────────────────────────────
'  CARGA Y DONACIONES
' ─────────────────────────────────────────

class CargaDeDonacion {
  - String descripcionGeneral
  - LocalDate fecha
  - PersonaDonante donante
  - List<Bien> bienes
  + agregarBien(Bien): void
  + segmentar(): List<Donacion>
}

class Donacion {
  - Subcategoria subcategoria
  - int cantidad
  - String unidadMedida
  - EstadoDonacion estado
  - LocalDate fechaRegistro
  - PersonaDonante donante
  - EntidadBeneficiaria entidadAsignada
  - String justificacionFallida
  + avanzarEstado(): void
  + asignarEntidad(EntidadBeneficiaria): void
  + marcarEntregaFallida(String justificacion): void
  + marcarVencida(): void
  + getEstado(): EstadoDonacion
}

enum EstadoDonacion {
  EN_DEPOSITO
  ASIGNACION_REALIZADA
  LISTA_PARA_ENTREGAR
  EN_TRASLADO
  ENTREGADA
  ENTREGA_FALLIDA
  VENCIDA
}

' ─────────────────────────────────────────
'  ENTIDADES BENEFICIARIAS Y NECESIDADES
' ─────────────────────────────────────────

class EntidadBeneficiaria {
  - String razonSocial
  - String direccion
  - String telefono
  - List<String> emailsRepresentantes
  - List<Necesidad> necesidades
  + agregarNecesidad(Necesidad): void
  + getNecesidades(): List<Necesidad>
}

abstract class Necesidad {
  - Subcategoria subcategoria
  - String descripcion
  + getSubcategoria(): Subcategoria
  + estaSatisfecha(): boolean
  + registrarRecepcion(int cantidad): void
}

class NecesidadExtraordinaria {
  - int cantidadRequerida
  - int cantidadRecibida
  + estaSatisfecha(): boolean
  + registrarRecepcion(int cantidad): void
}

class NecesidadRecurrente {
  - int cantidadObjetivoPorPeriodo
  - String periodoDescripcion
  - int cantidadRecibidaEnPeriodo
  + estaSatisfecha(): boolean
  + registrarRecepcion(int cantidad): void
  + reiniciarPeriodo(): void
}

' ─────────────────────────────────────────
'  NOTIFICACIONES
' ─────────────────────────────────────────

class Notificacion {
  - PersonaDonante destinatario
  - String mensaje
  - MedioDeContacto medio
  - boolean completada
  + enviar(): void
  + marcarCompletada(): void
}

' ─────────────────────────────────────────
'  RELACIONES
' ─────────────────────────────────────────

PersonaDonante <|-- PersonaHumana
PersonaDonante <|-- PersonaJuridica

PersonaJuridica "1" *-- "1..*" Representante
PersonaJuridica --> TipoJuridico

PersonaDonante "1" o-- "1..*" MedioDeContacto
PersonaDonante --> MedioDeContacto : predeterminado

MedioDeContacto <|-- Email
MedioDeContacto <|-- Telefono
MedioDeContacto <|-- WhatsApp

Subcategoria --> Categoria

Bien <|-- BienSimple
Bien <|-- BienConEstado
Bien <|-- BienPerecible
Bien --> Subcategoria

CargaDeDonacion "1" *-- "1..*" Bien
CargaDeDonacion --> PersonaDonante
CargaDeDonacion ..> Donacion : <<genera>>

Donacion --> Subcategoria
Donacion --> EstadoDonacion
Donacion --> PersonaDonante
Donacion --> EntidadBeneficiaria

EntidadBeneficiaria "1" *-- "0..*" Necesidad

Necesidad <|-- NecesidadExtraordinaria
Necesidad <|-- NecesidadRecurrente
Necesidad --> Subcategoria

Notificacion --> MedioDeContacto
Notificacion --> PersonaDonante

@enduml
